添加页面测试,新增mocha和chai模块

--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "dependencies": {
     "express": "~4.4.2",
     "express3-handlebars": "~0.5.0"
+  },
+  "devDependencies": {
+    "chai": "^1.9.1",
+    "mocha": "^2.3.4"
   }
 }
